monitoring/k8s-monitoring/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: k8s-monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "grafana.vanillax.xyz"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: k8s-monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "prometheus.vanillax.xyz"
  rules:
    - backendRefs:
        - name: prometheus-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: k8s-monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "loki.vanillax.xyz"
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo
  namespace: k8s-monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "tempo.vanillax.xyz"
  rules:
    - backendRefs:
        - name: tempo
          port: 3200
